tests/paczka1/small_fuzzy/26385787.err
Error in line 4: L3okLPX S702 6,1
Error in line 10: dKcmi A55 24,2
